# AgentGuard

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  agentguard-mvp.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agentguard/: __init__.py  audit.py  cli.py  guard.py  policy.py  presets.py
agentguard/integrations/: langchain.py
demo/: transfer_funds.py  travel_agent.py
examples/langchain_email_guard/: README.md  main.py
tests/: test_audit.py  test_cli.py  test_guard.py  test_langchain_integration.py  test_policy.py  test_presets.py
